--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 body {
-    background: black;
+    background: white;
+}
+
+button {
+    cursor: pointer;
 }
 
 .game {
@@ -7,52 +11,81 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     border-radius: 20px;
-    width: 650px;
-    height: 400px;
-    padding: 10px;
+    width: 750px;
+    height: 500px;
+    padding: 20px;
+    margin: 0 auto;
 
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
 }
 
-.controller {
-    border-radius: 10px;
-    background: transparent;
-    margin: 0 auto;
+.game__header {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 5px;
 }
 
-.controller > button {
-    font-size: 20px;
-    background-color: beige;
-    border: solid 3px black;
-    border-radius: 10px;
-    padding: 10px 15px;
+.game__header button, .game__header i {
+    font-size: 24px;
+    border-radius: 5px;
 }
 
-.controller > button:hover {
-    cursor: pointer;
-    transform: scale(1.1);
-}
-
-.controller > .timer {
-    font-size: 30px;
-    background-color: azure;
+.game__timer {
+    font-size: 32px;
     border: solid 3px black;
     border-radius: 10px;
     padding: 5px 20px;
-    text-align: center;
+    background-color: white;
 }
 
-.controller > .counter {
-    font-size: 30px;
-    color: white;
+.game__score {
+    font-size: 32px;
     background-color: coral;
     border: solid 3px black;
     border-radius: 50%;
     padding: 10px;
+    color: white;
 }
+
+.game__field {
+    width: 100%;
+    height: 100%;
+    max-height: 250px;
+}
+
+.pop-up {
+    margin: 0 auto;
+    text-align: center;
+    width: 300px;
+    height: 100px;
+    transform: translateY(-150%);
+    border-radius: 10px;
+    padding: 20px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+
+}
+.pop-up button {
+    background: transparent;
+}
+
+.pop-up i {
+    font-size: 24px;
+}
+
+.pop-up__message {
+    font-size: 24px;
+}
+
+.pop-up-hidden {
+    display: none;
+}
+
