--- a/style.css
+++ b/style.css
@@ -55,6 +55,11 @@ button {
     width: 100%;
     height: 100%;
     max-height: 250px;
+    position: relative;
+
+    /*TODO: to be deleted*/
+    background: black;
+    opacity: 0.5;
 }
 
 .pop-up {
@@ -89,3 +94,13 @@ button {
     display: none;
 }
 
+.game__bug {
+    position: absolute;
+    z-index: 1;
+}
+
+.game__carrot {
+    position: absolute;
+    z-index: 2;
+    top: 100px;
+}
