feat: CountDown & Stop & Click 방지 기능 완성

--- a/style.css
+++ b/style.css
@@ -36,6 +36,9 @@ button {
     border-radius: 10px;
     background-color: #ff9100;
 }
+.button-hidden {
+    visibility: hidden;
+}
 .game__header i {
     font-size: 24px;
 }
